# owlnext-sdi-skeleton

./: .gitignore  CMakeLists.txt  build.bat  buildv.bat  exec.bat  main.cpp  makefile  misc.cpp  misc.h  pch.cpp  pch.h  readme.MD  res.rc  res.rh  resource.h  resource.rc  version.h
